--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "js-cookie": "^3.0.5",
         "laravel-vue-pagination": "^4.1.3",
         "vue": "^3.5.13",
-        "vue3-toastify": "^0.2.8"
+        "vue3-toastify": "^0.2.8",
+        "vuedraggable": "^4.1.0"
     }
 }
